# cs-rs

./: .gitignore  ACTION_PLAN_2026-01-04.md  ANGO_2025_WORKFLOW.md  ARCHITECTURE.md  CALENDAR_SPREAD_ANALYSIS_Q4_2025.md  CLI_FACTORY_IMPLEMENTATION_COMPLETE.md  CLI_FACTORY_IMPLEMENTATION_PLAN.md  CLI_REFACTORING_COMPLETE.md  CLI_REFACTORING_PHASE2_PLAN.md  CLI_REFACTORING_RECOMMENDATION.md  CODE_REVIEW_2026-01-08.md  CODE_REVIEW_REPORT.md  CUSTOM_EARNINGS_PLAN.md  Cargo.toml  DAY2_UNHEDGED_ANALYSIS.md  DIAGNOSIS_roll1_hedge_failure.md  EARNINGS_ANALYSIS_Q4_2025.md  EXPECTED_MOVE_ANALYSIS.md  EXPECTED_MOVE_IMPLEMENTATION_COMPLETE.md  EXPECTED_MOVE_REAL_DATA_ANALYSIS.md  FIX_PLAN_straddle_expiration.md  HEDGE_CALCULATION_FIX_REPORT.md  HEDGING_ANALYSIS_CORRECT_V2.md  HEDGING_ANALYSIS_REPORT.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_PLAN_flexible_trading.md  ISSUE_hedging_statistics.md  ISSUE_straddle_expiration_before_earnings.md  LONG_CALL_VS_SHORT_CALL_REPORT.md  MINUTE_ALIGNED_BUG_REPORT.md  MODULAR_SIMULATION_SYSTEM.md  PANEL_INTERPRETATION_GUIDE.md  PLAN_ADVANCED_IRON_BUTTERFLY.md  PLAN_MULTI_LEG_STRATEGIES.md  PLAN_POST_EARNINGS_STRADDLE.md  QUICK_START_REPLAY.md  QUICK_START_flexible_trading.md  README.md  README_CM_IV_PLOTS.md  REFACTORING_COMPLETION_SUMMARY.txt  (+81 more)
cs-analytics/: Cargo.toml
cs-analytics/src/: arbitrage.rs  atm_iv_computer.rs  black_scholes.rs  delta_surface.rs  greeks.rs  historical_iv.rs  iv_model.rs  iv_statistics.rs  iv_surface.rs  lib.rs  math_utils.rs  opportunity.rs  pnl_attribution.rs  realized_volatility.rs  selection_model.rs  straddle.rs  svi.rs  svi_fitter.rs  vol_slice.rs
cs-backtest/: Cargo.toml
cs-backtest/src/: atm_iv_use_case.rs  backtest_use_case.rs  backtest_use_case_helpers.rs  bpr.rs  calendar_straddle_executor.rs  calendar_straddle_pricer.rs  campaign_config.rs  campaign_use_case.rs  commands.rs  composite_pricer.rs  config.rs  earnings_analysis_use_case.rs  greeks_helpers.rs  hedging_analytics.rs  hedging_executor.rs  hedging_simulator.rs  iron_butterfly_executor.rs  iron_butterfly_pricer.rs  iv_surface_builder.rs  iv_validation.rs  lib.rs  minute_aligned_iv_use_case.rs  multi_leg_pricer.rs  option_bar_adapter.rs  rolling_executor.rs  rolling_straddle_executor.rs  run_contract.rs  session_executor.rs  spread_pricer.rs  straddle_executor.rs  straddle_pricer.rs  timing_strategy.rs  trade_executor.rs  trade_executor.rs.bak  trade_executor_factory.rs  trade_factory_impl.rs  trade_orchestrator.rs  trade_strategy.rs  unified_executor.rs
cs-backtest/src/attribution/: greeks_computer.rs  mod.rs  snapshot_collector.rs
cs-backtest/src/config/: data_source.rs  earnings_source.rs  execution.rs  mod.rs
cs-backtest/src/delta_providers/: common.rs  current_hv.rs  current_market_iv.rs  entry_volatility.rs  gamma_approximation.rs  historical_average_iv.rs  mod.rs
cs-backtest/src/execution/: butterfly_impl.rs  calendar_spread_impl.rs  calendar_straddle_impl.rs  condor_impl.rs  cost_helpers.rs  generic_executor.rs  helpers.rs  iron_butterfly_impl.rs  iron_condor_impl.rs  mod.rs  straddle_impl.rs  strangle_impl.rs  traits.rs  types.rs
cs-backtest/src/rules/: evaluator.rs  mod.rs
cs-backtest/src/strike_selection/: atm.rs  delta.rs  mod.rs  multi_leg.rs
cs-backtest/tests/: command_mapper.rs  deterministic_core_calculations_spec.rs  execution_paths_spec.rs  golden_regression_suite.rs  run_contract_spec.rs  test_crbg_execution.rs  test_trade_orchestrator.rs  test_unified_executor.rs
cs-cli/: Cargo.toml
cs-cli/src/: cli.rs  cli_args.rs  config.rs  lib.rs  main.rs
cs-cli/src/args/: analyze.rs  atm_iv.rs  attribution.rs  backtest.rs  campaign.rs  common.rs  earnings.rs  hedging.rs  metrics.rs  mod.rs  option_type.rs  price.rs  rules.rs  selection.rs  selection_type.rs  spread_type.rs  strategy.rs  timing.rs
cs-cli/src/commands/: analyze.rs  atm_iv.rs  backtest.rs  campaign.rs  earnings.rs  handler.rs  mod.rs  price.rs
cs-cli/src/config/: app.rs  builder.rs  campaign_builder.rs  mod.rs  validation.rs
cs-cli/src/display/: mod.rs  results.rs
cs-cli/src/factory/: ib_repository_factory.rs  mod.rs  repository_factory.rs  use_case_factory.rs
cs-cli/src/handlers/: earnings_output.rs  mod.rs
cs-cli/src/mapping/: backtest_command_mapper.rs  mod.rs
cs-cli/src/output/: backtest.rs  campaign.rs  mod.rs
cs-cli/src/parsing/: earnings_loader.rs  mod.rs  roll_policy.rs  time_config.rs
cs-cli/tests/: canonical_help.rs  command_mapper.rs  demo_smoke.rs
cs-domain/: Cargo.toml
cs-domain/examples/: check_earnings.rs  check_earnings_sources.rs
cs-domain/src/: builders.rs  datetime.rs  entities.rs  hedging.rs  lib.rs  repositories.rs  testing.rs  value_objects.rs
cs-domain/src/accounting/: capital.rs  has_accounting.rs  margin.rs  mod.rs  return_basis.rs  statistics.rs  trade_accounting.rs
cs-domain/src/campaign/: campaign.rs  mod.rs  period_policy.rs  schedule.rs  session.rs
cs-domain/src/config/: filter_criteria.rs  mod.rs  position_spec.rs
cs-domain/src/entities/: accounting_impls.rs  cost_impls.rs  rollable_impls.rs  rolling_result.rs
cs-domain/src/expiration/: cycle.rs  mod.rs  policy.rs
cs-domain/src/infrastructure/: custom_file_earnings.rs  demo_repos.rs  earnings_reader_adapter.rs  earnings_repo.rs  finq_equity_repo.rs  finq_options_repo.rs  ib_equity_repo.rs  ib_options_repo.rs  mod.rs  option_bar_conversions.rs  parquet_results_repo.rs
cs-domain/src/pnl/: convert.rs  mod.rs  record.rs  statistics.rs
cs-domain/src/ports/: mod.rs  trade_factory.rs
cs-domain/src/position/: daily_snapshot.rs  mod.rs  position_attribution.rs
cs-domain/src/roll/: event.rs  mod.rs  policy.rs
cs-domain/src/rules/: config.rs  error.rs  event.rs  market.rs  mod.rs  trade.rs
cs-domain/src/services/: earnings_timing.rs  mod.rs  pnl_calculator.rs  post_earnings_timing.rs  straddle_timing.rs  trading_calendar.rs
cs-domain/src/strategies/: atm.rs  delta.rs  iron_butterfly.rs  mod.rs  straddle.rs
cs-domain/src/trade/: mod.rs  (+2 more)
cs-python/: Cargo.toml  README.md  example.py
cs-python/src/: analytics.rs  backtest.rs  domain.rs  lib.rs
(+1376 files in other folders)
