[workspace]
resolver = "2"
members = [
    "cs-analytics",
    "cs-domain",
    "cs-backtest",
    "cs-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
license = "MIT"
authors = ["Mohamed Ali"]

[workspace.dependencies]
# Internal crates
cs-analytics = { path = "cs-analytics" }
cs-domain = { path = "cs-domain" }
cs-backtest = { path = "cs-backtest" }

# External: finq-rs (path for dev, version for release)
finq-core = { path = "../finq-rs/crates/finq-core" }
finq-flatfiles = { path = "../finq-rs/crates/finq-flatfiles" }
finq-rest = { path = "../finq-rs/crates/finq-rest" }
finq-websocket = { path = "../finq-rs/crates/finq-websocket" }
finq-sdk = { path = "../finq-rs/crates/finq-sdk" }

# External: earnings-rs
earnings-rs = { path = "../trading_project/earnings-rs" }

# Async runtime
tokio = { version = "1.35", features = ["rt-multi-thread", "macros", "sync", "time"] }
tokio-stream = "0.1"
futures = "0.3"
async-trait = "0.1"

# Data processing (match finq-rs versions)
polars = { version = "0.41", features = ["parquet", "lazy", "temporal"] }
arrow = "53"
parquet = { version = "53", features = ["async"] }

# Math & numerics
rust_decimal = { version = "1.33", features = ["serde", "serde-with-str"] }
rust_decimal_macros = "1.33"
statrs = "0.16"
roots = "0.0.8"
nalgebra = "0.33"
argmin = "0.10"
argmin-math = { version = "0.5", features = ["nalgebra_v0_33"] }

# Time handling
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.10"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Parallelism
rayon = "1.8"

# CLI
clap = { version = "4.4", features = ["derive", "env"] }
tabled = "0.15"
indicatif = "0.17"
console = "0.15"
dirs = "5.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Python bindings
pyo3 = { version = "0.22", features = ["extension-module"] }

# Testing
tokio-test = "0.4"
criterion = "0.5"
approx = "0.5"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
