[project]
name = "cs-rs-python"
version = "0.1.0"
description = "Python utilities for cs-rs project"
requires-python = ">=3.11"
dependencies = [
    "finq",
    "polars>=1.0.0",
    "pyarrow>=14.0.0",
    "matplotlib>=3.8.0",
    "numpy>=1.24.0",
]

[tool.uv.sources]
finq = { path = "/Users/mohamedali/polygon", editable = true }
