[package]
name = "cs-analytics"
version.workspace = true
edition.workspace = true

[dependencies]
rust_decimal = { workspace = true }
chrono = { workspace = true }
polars = { workspace = true }
statrs = { workspace = true }
roots = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
approx = { workspace = true }

# Benchmarks will be added in Phase 1
# [[bench]]
# name = "black_scholes"
# harness = false
