[package]
name = "cs-backtest"
version.workspace = true
edition.workspace = true

[features]
default = ["full"]
# Full mode: all data providers available
full = ["cs-domain/full", "dep:earnings-rs"]
# Demo mode: uses fixture data
demo = ["cs-domain/demo"]

[dependencies]
cs-analytics = { workspace = true }
cs-domain = { workspace = true }
finq-core = { workspace = true }
earnings-rs = { workspace = true, optional = true }
tokio = { workspace = true }
futures = { workspace = true }
rayon = { workspace = true }
polars = { workspace = true }
rust_decimal = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
parquet = { workspace = true }
dirs = { workspace = true }
async-trait = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true }
