[package]
name = "cs-cli"
version.workspace = true
edition.workspace = true

[[bin]]
name = "cs"
path = "src/main.rs"

[dependencies]
cs-analytics = { workspace = true }
cs-domain = { workspace = true }
cs-backtest = { workspace = true }
tokio = { workspace = true }
clap = { workspace = true }
async-trait = { workspace = true }
tabled = { workspace = true }
indicatif = { workspace = true }
console = { workspace = true }
dirs = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
finq-core = { workspace = true }
rust_decimal = { workspace = true }
polars = { workspace = true }
figment = { version = "0.10", features = ["toml", "env"] }
serde = { workspace = true }
plotters = { version = "0.3", default-features = false, features = ["bitmap_backend", "bitmap_encoder", "line_series", "chrono", "ttf"] }
