[package]
name = "cs-domain"
version.workspace = true
edition.workspace = true

[dependencies]
cs-analytics = { workspace = true }
finq-core = { workspace = true }
finq-flatfiles = { workspace = true }
earnings-rs = { workspace = true }
rust_decimal = { workspace = true }
rust_decimal_macros = { workspace = true }
chrono = { workspace = true }
chrono-tz = { workspace = true }
polars = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
parquet = { workspace = true }
arrow = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
toml = { workspace = true }
tempfile = "3.10"
